--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Configuration file
 # key = value
 
-quarkus.datasource.url=jdbc:postgresql:quarkus_test
+quarkus.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+quarkus.datasource.username=${DB_USER}
+quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=quarkus_test
-quarkus.datasource.password=quarkus_test
 quarkus.datasource.max-size=8
 quarkus.datasource.min-size=2
 
