--- a/source/application.properties
+++ b/source/application.properties
@@ -4,3 +4,6 @@ quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.driver=org.postgresql.Driver
 quarkus.datasource.max-size=8
 quarkus.datasource.min-size=2
+
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=import.sql
